# LMT-toolkit-app

./: .gitignore  README.md  README_app.md  SETUP_GUIDE.md  pyproject.toml  requirements.txt  run_app.py  setup.py
.conda/.condatmp/: 96810490-d94b-4f35-80e3-7cc6d4e5db1b  aad7169f-8c27-4342-8162-9e1c54646fe4
data/: identity_space_results.csv
docs/: LICENSE  README.html  readme.md  requirements.txt
src/: __init__.py  bootstrap.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/analysis/: What is the scree plot and how can it help in choo.md  __init__.py  davids_score.py  gui.py  identity_domain.py  lda_fo3mini.py  noise_reduction.py  parallel_pca.py  pca_new.py  preprocessing.py
src/behavior/: README.md  behavior_processor.py  behavior_processor_hourly.py  behavior_processor_interval.py
src/config/: __init__.py  settings.yaml
src/data/: EID_matrix.npy  eigenvalues.npy  id_stability_scores.csv  top_behaviors.csv
src/database/: lda_database_creator.py  simple_lda_database_creator.py
src/lmt_dim_reduction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/preprocessing/: __init__.py  event_filtered.py  feature_ratios.py
src/utils/: __init__.py  table_to_csv_converter.py
src/visualization/: plot_id_profiles.py
streamlit_app/: README.md  app.py  config.py  requirements.txt
streamlit_app/pages/: 1_📊_Database_Management.py  2_🔍_Feature_Extraction.py  3_📊_Dimensionality_Reduction.py  4_📈_Visualization.py  pg.py
streamlit_app/utils/: __init__.py  analysis_utils.py  db_direct_access.py  db_utils.py  (+2 more)
tools/: fix_encoding.py
(+8 files in other folders)
